--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "request": "^2.74.0",
     "request-promise": "^4.0.2",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1"
   }
 }
