--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.13.2",
     "gulp": "^3.9.1",
+    "gulp-babel": "^6.1.2",
+    "gulp-nodemon": "^2.1.0",
     "gulp-obfuscate": "^0.2.9",
     "gulp-sourcemaps": "^1.6.0"
   }
