make docker user non root

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,35 +1,51 @@
-user www-data www-data;
-worker_processes  5;  ## Default: 1
-worker_rlimit_nofile 8192;
+user  nginx;
+worker_processes  1;
+
+error_log  /var/log/nginx/error.log warn;
+pid        /var/run/nginx.pid;
+
 
 events {
-  worker_connections  4096;  ## Default: 1024
+    worker_connections  1024;
 }
+
 
 http {
     include       /etc/nginx/mime.types;
-    default_type  application/octet-stream;  
-    charset   utf-8;
-    keepalive_timeout  3000;
-    server_tokens       off;
-    tcp_nopush          on;
-    tcp_nodelay         off;
-    
-server {
-        listen 80;
-        index index.html;
-        server_name uberordrive.com;
-        location ~* / {
-            proxy_pass http://uod:3000;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
-		proxy_read_timeout 600;
-        }
-	location /public {
-	root /usr/src/app/public;
+    default_type  application/octet-stream;
+
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log  /dev/stdout  main;
+    sendfile        on;
+    keepalive_timeout  65;
+
+    server {
+        listen       80;
+        server_name  _;
+        return 301 https://$host$request_uri;
     }
-}
+
+    server {
+        listen              443 ssl;
+        #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        server_name         www.uberordrive.com;
+        ssl_certificate     /etc/letsencrypt/live/www.uberordrive.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/www.uberordrive.com/privkey.pem;
+        ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+        ssl_ciphers         HIGH:!aNULL:!MD5;
+
+        location ^~ /.well-known/ {
+            root   /usr/share/nginx/html;
+            allow all;
+        }
+
+        location / {
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_pass http://uod:3000;
+        }
+    }
 }
