--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "morgan": "~1.7.0",
     "request": "^2.74.0",
     "request-promise": "^4.0.2",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "^2.4.1"
   },
   "devDependencies": {
+    "serve-favicon": "^2.4.1",
     "babel-preset-es2015": "^6.13.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
