--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "serve-favicon": "^2.4.1"
   },
   "devDependencies": {
-    "serve-favicon": "^2.4.1",
     "babel-preset-es2015": "^6.13.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-nodemon": "^2.1.0",
     "gulp-obfuscate": "^0.2.9",
-    "gulp-sourcemaps": "^1.6.0"
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-strip-debug": "^1.1.0",
+    "serve-favicon": "^2.4.1"
   }
 }
