--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.15.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
+    "dotenv": "^5.0.0",
     "express": "~4.13.4",
     "gulp": "^3.9.1",
     "gulp-cli": "^1.2.2",
@@ -22,10 +23,12 @@
     "babel-preset-es2015": "^6.13.2",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-concat": "^2.6.1",
     "gulp-nodemon": "^2.1.0",
     "gulp-obfuscate": "^0.2.9",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-strip-debug": "^1.1.0",
+    "gulp-uglify": "^3.0.0",
     "serve-favicon": "^2.4.1"
   }
 }
