--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "serve-favicon": "^2.4.1"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-env": "^1.6.1",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
