--- a/package.json
+++ b/package.json
@@ -3,32 +3,31 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "gulp": "gulp"
   },
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "dotenv": "^5.0.0",
-    "express": "~4.13.4",
-    "gulp": "^3.9.1",
-    "gulp-cli": "^1.2.2",
-    "jade": "~1.11.0",
-    "morgan": "~1.7.0",
-    "request": "^2.74.0",
-    "request-promise": "^4.0.2",
-    "serve-favicon": "^2.4.1"
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "debug": "^2.6.9",
+    "dotenv": "^5.0.1",
+    "express": "^4.16.4",
+    "jade": "^1.11.0",
+    "morgan": "^1.9.1",
+    "request": "^2.88.0",
+    "request-promise": "^4.0.2"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.6.1",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-concat": "^2.6.1",
-    "gulp-nodemon": "^2.1.0",
+    "gulp-nodemon": "^2.4.1",
     "gulp-obfuscate": "^0.2.9",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-strip-debug": "^1.1.0",
-    "gulp-uglify": "^3.0.0",
-    "serve-favicon": "^2.4.1"
+    "gulp-uglify": "^3.0.1",
+    "serve-favicon": "^2.5.0"
   }
 }
